# authkit

./: .env.example  .gitattributes  .gitignore  .health-dashboard.yml  .pre-commit-config.yaml  ADR.md  AGENTS.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CLAUDE.md  Cargo.toml  Dockerfile  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SESSION_MANAGEMENT_AUDIT.md  SPEC.md  TEST_COVERAGE_MATRIX.md  TOKEN_STORAGE_AUDIT.md  cargo-machete.yml  clippy.toml  deny.toml  pyproject.toml  registry.yaml  stub-inventory.md  worklog.md
.agileplus/specs/001-authvault-core/: SPEC.md  meta.json  tasks.md
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: benchmarks.yml  cargo-deny.yml  ci.yaml  ci.yml  codeql.yml  coverage.yml  doc-links.yml  fr-coverage.yml  pages-deploy.yml  quality-gate.yml  release-drafter.yml  release.yml  sast.yml  scorecard.yml  security-deep-scan.yml  security-guard.yml  security.yml  trufflehog.yml
FRs/: FR-AUTH-001.md  FR-AUTH-002.md  FR-AUTH-003.md  FR-AUTH-004.md  FR-AUTH-005.md  FR-AUTH-006.md  FR-AUTH-007.md  FR-AUTH-008.md  FR-AUTH-009.md  FR-AUTH-010.md
benches/: auth.rs  benchmarks.rs
docs/: FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  SPEC.md
docs/adr/: ADR-001-auth-flow.md  ADR-002-session-management.md  ADR-003-multi-provider.md  ADRS.md
docs/journeys/: index.md  quick-start.md
docs/research/: AUTH_TOOLKITS_SOTA.md
docs/sota/: SOTA.md
docs/stories/: hello-world.md  index.md
docs/traceability/: index.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: crypto_fuzzer.rs
rust/: Cargo.toml  deny.toml
rust/.github/workflows/: ci.yml
rust/phenotype-auth/: Cargo.toml  lib.rs
rust/phenotype-auth/adapters/: mod.rs
rust/phenotype-auth/domain/: mod.rs  ports.rs
rust/phenotype-auth/infrastructure/: mod.rs
rust/phenotype-authz-engine/: Cargo.toml
rust/phenotype-authz-engine/src/: lib.rs
rust/phenotype-bid/: Cargo.toml
rust/phenotype-bid/src/: lib.rs
rust/phenotype-content-hash/: Cargo.toml
rust/phenotype-content-hash/src/: lib.rs
rust/phenotype-contracts/: Cargo.toml
rust/phenotype-policy-engine/: Cargo.toml
rust/phenotype-security-aggregator/: Cargo.toml
rust/phenotype-security-aggregator/src/: health_integration.rs  lib.rs  sources.rs
src/: lib.rs
src/adapters/: hashers.rs  storage.rs
src/application/: mod.rs  services.rs
src/domain/: auth.rs  errors.rs  identity.rs  mod.rs  policy.rs  ports.rs  session.rs
src/infrastructure/: error.rs
tests/: integration_tests.rs  unit_tests.rs
typescript/: package.json
