[workspace]
resolver = "2"
members = [
    "phenotype-auth",
    "phenotype-bid",
    "phenotype-cipher",
    "phenotype-content-hash",
    "phenotype-contracts",
    "phenotype-security-aggregator",
    "phenotype-authz-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
authors = ["Phenotype Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/AuthKit"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
chrono = "0.4"
rand = "0.8"
