[package]
name = "phenotype-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Authentication and authorization framework with OAuth2, JWT, RBAC/ABAC, and multi-tenant support"
license.workspace = true
repository = "https://github.com/KooshaPari/AuthKit"
documentation = "https://docs.rs/phenotype-auth"
keywords = ["auth", "authentication", "authorization", "jwt", "oauth", "rbac", "abac"]
categories = ["authentication", "web-programming"]
rust-version = "1.75"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
async-trait = "0.1"
anyhow = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"
http = "1"
axum = "0.7"
tokio-postgres = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
bcrypt = "0.15"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true

[[bench]]
name = "perf"
harness = false
