[package]
name = "phenotype-authz-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
phenotype-error-core = { path = "../phenotype-error-core" }
phenotype-content-hash = { path = "../phenotype-content-hash" }
phenotype-serde-adapters = { path = "../phenotype-serde-adapters" }
phenotype-time = { path = "../phenotype-time" }

async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = "9.3.0"
regex = { workspace = true }
once_cell = { workspace = true }
dashmap = "6.1"
